Cards test & difference between renderers

--- a/public/sass/components/_upload.scss
+++ b/public/sass/components/_upload.scss
@@ -17,8 +17,8 @@
 // @import "../../style/mixins/index";
 
 $ant-prefix: 'ant';
-$upload-prefix-cls: "#{$ant-prefix}-upload";
-$upload-item: "#{$ant-prefix}-upload-list-item";
+$upload-prefix-cls: '#{$ant-prefix}-upload';
+$upload-item: '#{$ant-prefix}-upload-list-item';
 $upload-pictrue-card-size: 104px;
 $iconfont-css-prefix: 'anticon';
 
